Hej lite mer fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,7 +120,7 @@
             <img src="/frontend/images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
             <em>Niky, Lund</em>
           </div>
-          <div class="carousel-item bg-dark">
+          <div class="carousel-item bg-secondary">
             <h2>"Wonderful atmospehere and they also sell beer!"</h2>
             <img src="/frontend/images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
             <em>Sara, Malmö</em>
