--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,13 +13,13 @@
 
   <!-- CSS sheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/frontend/styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/c39f8eeda8.js" crossorigin="anonymous"></script>
 
   <!-- Movie logo -->
-  <link rel="icon" href="/frontend/images/movieLogo.png" />
+  <link rel="icon" href="images/movieLogo.png" />
 
   <title>Filmvisarna</title>
 </head>
@@ -30,8 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Filmvisarna</a>
-        <img src="/frontend/images/movieLogo.png" alt="Movie Logo" width="30" height="24"
-          class="d-inline-block align-text-top" />
+        <img src="images/movieLogo.png" alt="Movie Logo" width="30" height="24" class="d-inline-block align-text-top" />
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,18 +74,18 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 mt-5 gap-3">
-            <img src="/frontend/images/gladiator_movie.jpg" alt="" height="400px" width="300px" />
+            <img src="images/gladiator_movie.jpg" alt="" height="400px" width="300px" />
             <a href="#" class="btn btn-primary">Info</a>
             <a href="#" class="btn btn-danger">Buy Tickets</a>
           </div>
           <div class="col-lg-4 col-md-6 mt-5 gap-3">
-            <img src="/frontend/images/django_movie.jpg" alt="" height="400px" width="300px" />
+            <img src="images/django_movie.jpg" alt="" height="400px" width="300px" />
 
             <a href="#" class="btn btn-primary">Info</a>
             <a href="#" class="btn btn-danger">Buy Tickets</a>
           </div>
           <div class="col-lg-4 col-md-6 mt-5 gap-3">
-            <img src="/frontend/images/jamesbond_movie.jpg" alt="" height="400px" width="300px" />
+            <img src="images/jamesbond_movie.jpg" alt="" height="400px" width="300px" />
 
             <a href="#" class="btn btn-primary">Info</a>
             <a href="#" class="btn btn-danger">Buy Tickets</a>
@@ -100,7 +99,7 @@
             <a href="#" class="btn btn-danger">Buy Tickets</a>
           </div>
           <div class="col-lg-4 mt-5 gap-3">
-            <img src="/frontend/images/The_Lion_King_poster.jpg" alt="" height="400px" width="300px" />
+            <img src="images/The_Lion_King_poster.jpg" alt="" height="400px" width="300px" />
 
             <a href="#" class="btn btn-primary">Info</a>
             <a href="#" class="btn btn-danger">Buy Tickets</a>
@@ -117,17 +116,17 @@
               "Wonderful service and very clean auditorioums, would
               recommend!"
             </h2>
-            <img src="/frontend/images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
+            <img src="images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
             <em>Niky, Lund</em>
           </div>
           <div class="carousel-item bg-secondary">
             <h2>"Wonderful atmospehere and they also sell beer!"</h2>
-            <img src="/frontend/images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
+            <img src="images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
             <em>Sara, Malmö</em>
           </div>
           <div class="carousel-item bg-dark">
             <h2>"Amazing staff, good sound and comfy chairs!"</h2>
-            <img src="/frontend/images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
+            <img src="images/Niky-modified.png" width="150px" height="150px" alt="niky-profile" />
             <em>Anton, Månen</em>
           </div>
         </div>
