Tim - Reduced code; started booking area basic just to illustrate how easy it is to expand site to include more "pages".

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,14 +67,9 @@
 
 
     <section class="title">
-
-      <!-- Första sida visas här i-->
-      <section class="focusBody"></section>
-      <!-- När man klickat en film visas detta.-->
-      <section class="focus"></section>
-
+      <!-- Har ändrat det så all mitten innehåll visas  -->
+      <section class="mainContent"> mainContent </section>
     </section>
-
 
     <!--  TESTIMONIALS SECTION-->
     <section id=" testimonials">
