Changed color palette for the carousel.
Now need to get the pictures to show

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,7 +112,7 @@
               />
               <em>Anton, Skåne</em>
             </div>
-            <div class="carousel-item bg-secondary">
+            <div class="carousel-item" style="background-color: #3e065f">
               <h2>"Wonderful atmospehere and they also sell beer!"</h2>
               <img
                 src="/frontend/images/Niky-modified.png"
@@ -122,7 +122,7 @@
               />
               <em>Niky, Skåne</em>
             </div>
-            <div class="carousel-item bg-dark">
+            <div class="carousel-item" style="background-color: #700b97">
               <h2>"Amazing staff, good sound and comfy chairs!"</h2>
               <img
                 src="/frontend/images/anton-pic.jpg"
@@ -132,7 +132,7 @@
               />
               <em>Sara, Malmö</em>
             </div>
-            <div class="carousel-item bg-secondary">
+            <div class="carousel-item" style="background-color: #8e05c2">
               <h2>"The atmosphere is electrifying!"</h2>
               <img
                 src="/frontend/images/anton-pic.jpg"
@@ -142,7 +142,7 @@
               />
               <em>Gustav, Malmö</em>
             </div>
-            <div class="carousel-item bg-dark">
+            <div class="carousel-item" style="background-color: #3e065f">
               <h2>"Test one two!"</h2>
               <img
                 src="/frontend/images/anton-pic.jpg"
