--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,7 +105,7 @@
                 recommend!"
               </h2>
               <img
-                src="/frontend/images/anton-pic.jpg"
+                src="images/anton-pic.jpg"
                 width="150px"
                 height="150px"
                 alt="anton-pic"
@@ -115,7 +115,7 @@
             <div class="carousel-item" style="background-color: #3e065f">
               <h2>"Wonderful atmospehere and they also sell beer!"</h2>
               <img
-                src="/frontend/images/Niky-modified.png"
+                src="images/Niky-modified.png"
                 width="150px"
                 height="150px"
                 alt="niky-profile"
@@ -125,7 +125,7 @@
             <div class="carousel-item" style="background-color: #700b97">
               <h2>"Amazing staff, good sound and comfy chairs!"</h2>
               <img
-                src="/frontend/images/anton-pic.jpg"
+                src="images/anton-pic.jpg"
                 width="150px"
                 height="150px"
                 alt="sara-profile"
@@ -135,7 +135,7 @@
             <div class="carousel-item" style="background-color: #8e05c2">
               <h2>"The atmosphere is electrifying!"</h2>
               <img
-                src="/frontend/images/anton-pic.jpg"
+                src="images/anton-pic.jpg"
                 width="150px"
                 height="150px"
                 alt="gustav-profile"
@@ -145,7 +145,7 @@
             <div class="carousel-item" style="background-color: #3e065f">
               <h2>"Test one two!"</h2>
               <img
-                src="/frontend/images/anton-pic.jpg"
+                src="images/tim.webp"
                 width="150px"
                 height="150px"
                 alt="tim-profile"
