--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <!-- CSS sheets -->
+    <!-- CSS sheets (first is Bootstrap, second is our own styling) -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -110,6 +110,7 @@
                 recommend!"
               </h2>
               <img
+                id="anton-pic"
                 src="images/anton-pic.jpg"
                 width="150px"
                 height="150px"
@@ -120,6 +121,7 @@
             <div class="carousel-item" style="background-color: #3e065f">
               <h2>"Wonderful atmospehere and they also sell beer!"</h2>
               <img
+                id="niky-pic"
                 src="images/Niky-modified.png"
                 width="150px"
                 height="150px"
@@ -130,6 +132,7 @@
             <div class="carousel-item" style="background-color: #700b97">
               <h2>"Amazing staff, good sound and comfy chairs!"</h2>
               <img
+                id="sara-pic"
                 src="images/anton-pic.jpg"
                 width="150px"
                 height="150px"
@@ -140,6 +143,7 @@
             <div class="carousel-item" style="background-color: #8e05c2">
               <h2>"The atmosphere is electrifying!"</h2>
               <img
+                id="gustav-pic"
                 src="images/anton-pic.jpg"
                 width="150px"
                 height="150px"
@@ -150,6 +154,7 @@
             <div class="carousel-item" style="background-color: #3e065f">
               <h2>"Test one two!"</h2>
               <img
+                id="tim-pic"
                 src="images/tim.webp"
                 width="150px"
                 height="150px"
