Cleaned up images in folder and added testi-pics. Changed our logo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/styles.css" />
 
     <!-- Movie logo -->
-    <link rel="icon" href="images/movieLogo.png" />
+    <link rel="icon" href="images/newMovieLogo.svg" />
 
     <title>Filmvisarna</title>
   </head>
@@ -33,7 +33,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Filmvisarna</a>
           <img
-            src="images/movieLogo.png"
+            src="images/newMovieLogo.svg"
             alt="Movie Logo"
             width="30"
             height="24"
@@ -133,7 +133,7 @@
               <h2>"Amazing staff, good sound and comfy chairs!"</h2>
               <img
                 id="sara-pic"
-                src="images/anton-pic.jpg"
+                src="images/sara-pic.jpg"
                 width="150px"
                 height="150px"
                 alt="sara-profile"
@@ -144,7 +144,7 @@
               <h2>"The atmosphere is electrifying!"</h2>
               <img
                 id="gustav-pic"
-                src="images/anton-pic.jpg"
+                src="images/gustav-pic.jpg"
                 width="150px"
                 height="150px"
                 alt="gustav-profile"
