Added Show my tickets page, and made a temporary ticket for reference

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="#">Tickets</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Show times</a>
+              <a class="nav-link" href="#showTickets">Show my tickets</a>
             </li>
             <!-- The shopping button-->
             <li class="nav-item">
