--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles.css" />
 
+  <!-- date picker-->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
+
   <!-- Movie logo -->
   <link rel="icon" href="images/newMovieLogo.svg" />
 
@@ -149,9 +153,12 @@
   <!-- Scripts-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
   <script src="/jsonflex.js"></script>
   <script src="/js/book.js"></script>
   <script src="/js/main.js"></script>
+
 </body>
 
 </html>
