--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,68 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google fonts here!-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- CSS sheets (first is Bootstrap, second is our own styling) -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="/styles.css" />
+  <!-- Google fonts here!-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet" />
 
-    <!-- date picker-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"
-    />
+  <!-- CSS sheets (first is Bootstrap, second is our own styling) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/styles.css" />
 
-    <!-- Movie logo -->
-    <link rel="icon" href="images/newMovieLogo.svg" />
+  <!-- date picker-->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
 
-    <title>Filmvisarna</title>
-  </head>
+  <!-- Movie logo -->
+  <link rel="icon" href="images/newMovieLogo.svg" />
 
-  <body>
-    <!-- Header contains the navbar -->
-    <header id="navbar-header"></header>
+  <title>Filmvisarna</title>
+</head>
 
-    <!-- <div class="focusBody"></div>-->
-    <main>
-      <section class="title">
-        <!-- Har ändrat det så all mitten innehåll visas  -->
-        <section class="mainContent">mainContent</section>
-      </section>
+<body>
+  <!-- Header contains the navbar -->
+  <header id="navbar-header"></header>
 
-      <!--  TESTIMONIALS SECTION-->
-      <section id="testimonials"></section>
-      <!-- End of Testimonials section-->
-      <!-- End of MAIN-->
-    </main>
+  <!-- <div class="focusBody"></div>-->
+  <main>
+    <section class="title">
+      <!-- Har ändrat det så all mitten innehåll visas  -->
+      <section class="mainContent">Det funkar inte</section>
+    </section>
 
-    <!-- Footer section, where to find us, links to social media etc-->
-    <footer id="footer"></footer>
-    <!-- Scripts-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"
-    ></script>
-    <script src="/jsonflex.js"></script>
-    <script src="/js/book.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="js/navbar.js"></script>
-    <script src="js/testimonails.js"></script>
-    <script src="js/footer.js"></script>
-  </body>
+    <!--  TESTIMONIALS SECTION-->
+    <section id="testimonials"></section>
+    <!-- End of Testimonials section-->
+    <!-- End of MAIN-->
+  </main>
+
+  <!-- Footer section, where to find us, links to social media etc-->
+  <footer id="footer"></footer>
+  <!-- Scripts-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+  <script src="/jsonflex.js"></script>
+  <script src="/js/book.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="js/navbar.js"></script>
+  <script src="js/testimonails.js"></script>
+  <script src="js/footer.js"></script>
+</body>
+
 </html>
