"Started making a booking page"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,6 +55,7 @@
   <script src="js/navbar.js"></script>
   <script src="js/testimonails.js"></script>
   <script src="js/footer.js"></script>
+  <script src="js/bookingticket.js"></script>
 </body>
 
 </html>
