--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,11 +50,14 @@
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
   <script src="/jsonflex.js"></script>
+  <script src="/js/ticketpage.js"></script>
+  <script src="/js/mainpage.js"></script>
+  <script src="/js/filmpage.js"></script>
   <script src="/js/main.js"></script>
-  <script src="js/navbar.js"></script>
-  <script src="js/testimonails.js"></script>
-  <script src="js/footer.js"></script>
-  <script src="js/bookingticket.js"></script>
+  <script src="/js/navbar.js"></script>
+  <script src="/js/testimonails.js"></script>
+  <script src="/js/footer.js"></script>
+  <script src="/js/bookingticket.js"></script>
 </body>
 
 </html>
