--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google fonts here!-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Google fonts here!-->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet" />
+    <!-- CSS sheets (first is Bootstrap, second is our own styling) -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/styles.css" />
 
-  <!-- CSS sheets (first is Bootstrap, second is our own styling) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/styles.css" />
+    <!-- date picker-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"
+    />
 
-  <!-- date picker-->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
+    <!-- Movie logo -->
+    <link rel="icon" href="images/newMovieLogo.svg" />
 
-  <!-- Movie logo -->
-  <link rel="icon" href="images/newMovieLogo.svg" />
+    <title>Filmvisarna</title>
+  </head>
 
-  <title>Filmvisarna</title>
-</head>
+  <body>
+    <!-- Header contains the navbar -->
+    <header id="navbar-header"></header>
 
-<body>
-  <!-- Header contains the navbar -->
-  <header id="navbar-header"></header>
+    <!-- <div class="focusBody"></div>-->
+    <main>
+      <section class="title">
+        <!-- Har ändrat det så all mitten innehåll visas  -->
+        <section class="mainContent">Det funkar inte</section>
+      </section>
 
-  <!-- <div class="focusBody"></div>-->
-  <main>
-    <section class="title">
-      <!-- Har ändrat det så all mitten innehåll visas  -->
-      <section class="mainContent">Det funkar inte</section>
-    </section>
+      <!--  TESTIMONIALS SECTION-->
+      <section id="testimonials"></section>
+      <!-- End of Testimonials section-->
+      <!-- End of MAIN-->
+    </main>
 
-    <!--  TESTIMONIALS SECTION-->
-    <section id="testimonials"></section>
-    <!-- End of Testimonials section-->
-    <!-- End of MAIN-->
-  </main>
-
-  <!-- Footer section, where to find us, links to social media etc-->
-  <footer id="footer"></footer>
-  <!-- Scripts-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-  <script src="/jsonflex.js"></script>
-  <script src="/js/ticketpage.js"></script>
-  <script src="/js/mainpage.js"></script>
-  <script src="/js/filmpage.js"></script>
-  <script src="/js/main.js"></script>
-  <script src="/js/navbar.js"></script>
-  <script src="/js/testimonails.js"></script>
-  <script src="/js/footer.js"></script>
-  <script src="/js/bookingticket.js"></script>
-</body>
-
+    <!-- Footer section, where to find us, links to social media etc-->
+    <footer id="footer"></footer>
+    <!-- Scripts-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"
+    ></script>
+    <script src="/jsonflex.js"></script>
+    <script src="/js/aboutpage.js"></script>
+    <script src="/js/ticketpage.js"></script>
+    <script src="/js/mainpage.js"></script>
+    <script src="/js/filmpage.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/navbar.js"></script>
+    <script src="/js/testimonails.js"></script>
+    <script src="/js/footer.js"></script>
+    <script src="/js/bookingticket.js"></script>
+  </body>
 </html>
