--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,6 +60,7 @@
     ></script>
     <script src="/jsonflex.js"></script>
     <script src="/js/aboutpage.js"></script>
+    <script src="/js/filterpage.js"></script>
     <script src="/js/ticketpage.js"></script>
     <script src="/js/mainpage.js"></script>
     <script src="/js/filmpage.js"></script>
@@ -68,5 +69,6 @@
     <script src="/js/testimonails.js"></script>
     <script src="/js/footer.js"></script>
     <script src="/js/bookingticket.js"></script>
+    
   </body>
 </html>
